--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 
     <title>MJU 코로나 자동진단</title>
 </head>
-<body>
+<body onload="ready()">
 
 <h1>명지대학교 온라인 코로나 진단서 작성 매크로</h1>
 
@@ -18,6 +18,7 @@
         <div class="inner">
             <div class="centered">
                 <form name="registration_form" method="POST" action="/registration">
+					<p class="errtxt" id="registration_err"></p>
                     <h2>회원가입</h2>
                     <ul>
                         <li>
@@ -71,7 +72,7 @@
                             </div>
                         </li>
                     </ul>
-                    <input type="submit" class="submit" value="확인">
+                    <input type="submit" class="submit" value="확인" id="submit_registration">
                 </form>
             </div>
         </div>
@@ -82,8 +83,9 @@
     <div class="outer">
         <div class="inner">
             <div class="centered">
-                <form name="login_form" method="POST" action="">
-                    <h2>로그인 (정보수정용)</h2>
+                <form name="login_form" method="POST" action="/login">
+					<p class="errtxt" id="login_err"></p>
+                    <h2>로그인 (준비중, 로그인X)</h2>
                     <ul>
                         <li>
                             <div>
@@ -106,8 +108,12 @@
                             </div>
                         </li>
                     </ul>
-                    <input type="submit" class="submit" value="확인">
+                    <input type="submit" class="submit" value="확인" id="submit_login">
                 </form>
+				<form name="edit_form" method="POST" action="/edit_user_info">
+					<p class="errtxt"></p>
+					<h2>TODO - 기능을 준비중입니다.</h2>
+				</form>
             </div>
         </div>
     </div>
